Update and rename html/home.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlueofPhoenix- home</title>
 </head>
 <nav>
     <ul>
-        <li><a href="/html/home.html">Home</a></li>
-        <li><a href="/html/about.html">About</a></li>
-        <li><a href="/html/services.html">Services</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about/index.html">About</a></li>
+        <li><a href="services/index.html">Services</a></li>
+        <li><a href="contact/index.html">Contact</a></li>
     </ul>
 </nav>
 <div class="container">
@@ -22,9 +22,9 @@
     </div>
         <h2>Blue_of_Phoenix_</h2>
         <div class="social-icons">
-            <a href="#"><img src="/assets/github-circle.svg" alt="GitHub"></a>
-            <a href="#"><img src="/assets/discord.svg" alt="Discord"></a>
-            <a href="#"><img src="/assets/tiktok.svg" alt="TikTok"></a>
+            <a href="#"><img src="assets/github-circle.svg" alt="GitHub"></a>
+            <a href="#"><img src="assets/discord.svg" alt="Discord"></a>
+            <a href="#"><img src="assets/tiktok.svg" alt="TikTok"></a>
         </div>
     </div>
     <div class="profile-image">
