--- a/services/index.html
+++ b/services/index.html
@@ -8,10 +8,10 @@
 </head>
 <nav>
     <ul>
-        <li><a href="/html/home.html">Home</a></li>
-        <li><a href="/html/about.html">About</a></li>
-        <li><a href="/html/services.html">Services</a></li>
-        <li><a href="/html/contact.html">Contact</a></li>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about/index.html">About</a></li>
+        <li><a href="/services/index.html">Services</a></li>
+        <li><a href="/contact/index.html">Contact</a></li>
     </ul>
 </nav>
 </div>
