--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 <div class="profile-card">
     <div class="profile-info">
         <div class="profile-image">
-        <img src="/assets/Profile.png" alt="Profilbild">
-    </div>
+            <img src="/assets/Profile.png" alt="Profile Image">
+        </div>
         <h2>Blue_of_Phoenix_</h2>
         <div class="social-icons">
-            <a href="#"><img src="assets/github-circle.svg" alt="GitHub"></a>
-            <a href="#"><img src="assets/discord.svg" alt="Discord"></a>
-            <a href="#"><img src="assets/tiktok.svg" alt="TikTok"></a>
+            <a href="https://github.com/BlueofPhoenix/"><img src="assets/github-circle.svg" alt="GitHub"></a>
+            <a href="https://discord.gg/ApQ3xMKAmM"><img src="assets/discord.svg" alt="Discord"></a>
+            <a href="https://www.tiktok.com/@blue_of_phoenix_"><img src="assets/tiktok.svg" alt="TikTok"></a>
         </div>
     </div>
     <div class="profile-image">
@@ -37,7 +37,6 @@
 
     
     
-    <script src="code.js"></script>
+    <script src="/js/code.js"></script>
 </body>
-
 </html>
