--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
 
         <iframe src="https://discord.com/widget?id=1215798250913927360&theme=dark" width="350" height="550" allowtransparency="false" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" ></iframe>
     </div>
-    <script src="code.js"></script>
+    <script src="/js/code.js"></script>
 
 </body>
 
