--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="title" content="BlueofPhoenix - home">
+    <meta name="description" content="The Official BlueofPhoenix Website">
+    <meta name="keywords" content="BlueofPhoenix">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
     <link rel="stylesheet" href="style/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,4 +45,5 @@
     
     <script src="/js/code.js"></script>
 </body>
+
 </html>
