--- a/services/index.html
+++ b/services/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about/index.html">About</a></li>
+        <li><a href="/chat/index.html">Chat</a></li>
         <li><a href="/services/index.html">Services</a></li>
         <li><a href="/contact/index.html">Contact</a></li>
     </ul>
