--- a/about/index.html
+++ b/about/index.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/index.html">Home</a></li>
         <li><a href="/about/index.html">About</a></li>
+        <li><a href="/chat/index.html">Chat</a></li>
         <li><a href="/services/index.html">Services</a></li>
         <li><a href="/contact/index.html">Contact</a></li>
     </ul>
@@ -20,7 +21,6 @@
     <div class="working">
         <h2>Work in Progress...</h2>
     </div>
-    
     
     <script src="/js/code.js"></script>
 </body>
